Fixed visual bugs on mobile screen

--- a/src/components/InventoriesDetails/InventoriesDetails.scss
+++ b/src/components/InventoriesDetails/InventoriesDetails.scss
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem 1.5rem 0 1.5rem;
+
     @include mixins.tablet {
       width: 50%;
       padding: 0 2.5rem 0 0;
@@ -43,6 +44,7 @@
     flex-wrap: wrap;
     padding: 0 1.5rem;
     max-height: 10rem;
+    
     @include mixins.tablet {
       width: 50%;
       padding: 0 0 0 2.5rem;
@@ -54,13 +56,16 @@
     flex-wrap: wrap;
     margin-bottom: 1rem;
     @include mixins.mobile-body-medium;
+
     @include mixins.tablet {
       @include mixins.tablet-desktop-body-medium;
       margin-bottom: 2rem;
     }
 
     &--bottom {
-      margin-bottom: 0;
+      @include mixins.tablet {
+        margin-bottom: 0;
+      }
     }
   }
 
